# codegen

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  vcpkg.json
src/: ast.hpp  common.hpp  hexdump.hpp  main.cpp
src/ast/: expression.hpp  print.hpp  statement.hpp  tree_printer.cpp  tree_printer.hpp  visitor.cpp  visitor.hpp
src/cgn/: generator.cpp  generator.hpp  x64.hpp
src/dyn/: function.hpp
src/hir/: basic_block.hpp  builtin_type.hpp  generator.cpp  generator.hpp  instruction.hpp  printer.cpp  printer.hpp
